[package]
name = "flight_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pid_controller = {path = "../pid_controller"}
# inertial_measurement = {path = "../inertial_measurement"}
game_utils = {path = "../game_utils"}